<resources>
    <string name="app_name">Premiere Application By BAMMOU</string>
    <string name="label_nom">Nom :</string>
    <string name="label_prenom">Prénom :</string>
    <string name="label_age">Age :</string>
    <string name="label_domaine">Domaine de compétences :</string>
    <string name="label_numero">Numéro de tel :</string>
    <string name="button_valider">Valider</string>
    <string name="confirmation_message">Êtes-vous sur ?</string>
    <string name="confirmation_titre">Confirmation</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>
    <string name="retour">RETOUR</string>
    <string name="ecran_vide">Ecran vide !</string>
    <string name="lancer_appel">Lancer un appel</string>
</resources>